Add new PNG images for shime characters (shime6.png, shime7.png, shime8.png, shime9.png)